# mcp-qimen

./: README.md  STANDARD.md  pyproject.toml  qimen_core.py  requirements.txt  server.py
examples/: generate-example.py
skill/: qimen.skill.md
